# claude-context-core

./: .env.crawl4ai  .gitignore  AGENTS.md  CLAUDE.md  FIX-INDEX-WITH-PROJECT.md  FIXES-SUMMARY.md  README.md  cognee-mcp-tools-refined.js  cognee-mcp-tools.js  direct-github-index.js  jest.config.js  mcp-api-server.js  mcp-server-integration-example.js  mcp-server.js  package-lock.json  package.json  test-cognee-integration.js  test-dataset-collections-fix.sh  test-index-direct.js  test-sync.js  test-web-ingestion.js  tsconfig.build.json  tsconfig.json  view-logs.sh
.claude/: settings.json
.context/: auto-scope.json
docs/: ALL-TOOLS-EXPLAINED.md  API-ENDPOINTS.md  ASYNC-INDEXING.md  AUTO-DATASET-FROM-DOMAIN.md  AUTO-SYNC-FEATURE.md  AUTO-WATCH-COMPLETE.md  BUG-FIX-AUTOSCOPING.md  CHECK-INDEX-FEATURE.md  COGNEE-UPDATE.md  COMPLETE-FIX-SUMMARY.md  CONTAINER-VERIFICATION.md  CRAWL-TIMEOUT-FIX.md  CRAWL-TOOL-IMPROVEMENTS.md  CRAWL4AI-CONTAINER-VERIFICATION.md  DATASET-COLLECTION-PROBLEM.md  DATASET-COLLECTIONS-FIX-COMPLETE.md  DATASET-COLLECTIONS-FIX.md  DATASET-COLLECTIONS-ROOT-CAUSE.md  DB-REINIT-COMPLETE-CLEANUP.md  DBEAVER_CONNECTION_GUIDE.md  DEPLOYMENT-RUNBOOK.md  DISCOVERY_PROGRESS_IMPROVEMENTS.md  DOCKER-VOLUME-SETUP.md  ENHANCEMENT-MULTI-DATASET-SEARCH.md  ENV_CONFIG.md  FINAL_TEST_RESULTS.md  FIX-CRAWL-DATASET-COLLECTIONS.md  FIX-DATASET-FILTERING.md  FIX-GITHUB-AND-COLLECTIONS.md  FIX-UI-API-ERROR.md  (+61 more)
services/splade-runner/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/splade-runner/app/: __init__.py  main.py  splade_client.py
(+465 files in other folders)
